# codex-claude-bridge

./: .gitignore  LICENSE  README.md  config.env.example  pyproject.toml
src/claude_codex_bridge/: bridge.py  config.py  install_shim.py  launcher.py
tests/: test_bridge.py  test_config.py
