[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-bridge"
version = "0.1.0"
description = "Run Claude Code against Codex CLI through a minimal Anthropic-compatible bridge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Sebesta" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.scripts]
claude-codex = "claude_codex_bridge.launcher:main"
codex-claude-bridge = "claude_codex_bridge.bridge:main"
claude-codex-install-shim = "claude_codex_bridge.install_shim:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
